# minimalist-bar

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  compile_commands.json  defs.h  display.c  display.h  i3ipc.c  i3ipc.h  i3status.json  main.c  parser.c  parser.h  sample_config.json
.github/workflows/: makefile.yml
display/: display.c  display.h  workspaces.c
modules/: battery.c  bluetooth.c  bluetooth.h  date.c  date.h  media.c  network.c  network.h  volume.c  volume.h
src/: defs.h  i3ipc.c  i3ipc.h  main.c  parser.c  parser.h
src/display/: display.h  modules.c  workspaces.c
src/modules/: battery.h  bluetooth.h  date.c  media.c  media.h  network.c  volume.c
